    instance of a class without invoking its constructor. FR #55490. (Sebastian)

- Improved intl extension:
  . Fixed bug #55562 (grapheme_substr() returns false on big length). (Stas)

- Improved JSON extension:
  . Added new json_encode() option JSON_UNESCAPED_UNICODE. FR #53946. (Irker, Gwynne)

- Improved CLI SAPI:
  . Added friendly log messages - Req #55109 (Arpad)

- Improved Session extension:
  . Expose session status via new function, session_status (Req #52982) (Arpad)
  
- Improved XSL extension:
  . XSL doesn't stop transformation anymore, if a PHP function can't be called (chregu)

04 Aug 2011, PHP 5.4.0 Alpha 3
- Added features:
 . Short array syntax, see UPGRADING guide for full details (rsky0711 at gmail 
   . com, sebastian.deutsch at 9elements . com, Pierre)
 . Binary numbers format (0b001010). (Jonah dot Harris at gmail dot com)
 . Support for Class::{expr}() syntax (Pierrick)

- Removed features:
  . Removed magic_quotes_gpc, magic_quotes_runtime and magic_quotes_sybase ini options.
    get_magic_quotes_gpc, get_magic_quotes_runtime are kept but always return
    false, set_magic_quotes_runtime raises an E_CORE_ERROR. (Pierrick, Pierre)

- Changed E_ALL to include E_STRICT. (Stas)

- Improved core functions
  . Fixed bug #55124 (recursive mkdir fails with current (dot) directory in path).
    (Pierre)

- Improved PHP-FPM SAPI:
  . Added process.max to control the number of process FPM can fork. FR #55166.
    (fat)
  . Dropped restriction of not setting the same value multiple times, the last
    one holds. (giovanni at giacobbi dot net, fat)

- SPL extension:
  . Added missing class_uses(..) as pointed out by #55266 (Stefan)
  . Fixed bug #55287 (spl_classes() not includes CallbackFilter classes)
    (sasezaki at gmail dot com, salathe)


14 Jul 2011, PHP 5.4.0 Alpha 2
- General improvements:
  . Zend Signal Handling. (Lucas Nealan,Arnaud Le Blanc,Brian Shire, Ilia)

- Improved Zend Engine
  . Improved parse error messages. (Felipe)
